<resources>
    <string name="app_name">Quản lý chi tiêu cá nhân</string>
    <string name="facebook_app_id">259053448910483</string>
    <string name="fb_login_protocol_scheme">fb259053448910483</string>
    <string name="evolving_functions">Chức năng đang phát triển</string>
    <string name="receipts_and_payments">Quản lý chi tiêu</string>
    <string name="phone_number_or_email">Số điện thoại hoặc email</string>
    <string name="password">Mật khẩu</string>
    <string name="login">Đăng nhập</string>
    <string name="logout">Đăng xuất</string>
    <string name="forget_password">Quên mật khẩu</string>
    <string name="register">Đăng ký</string>
    <string name="come_on">Tiếp tục</string>
    <string name="register_account_new">Đăng ký tài khoản mới</string>
    <string name="or_login_with">Hoặc đăng nhập bằng</string>
    <string name="vietnamese">Tiếng Việt</string>
    <string name="register_success">Đăng ký thành công</string>
    <string name="register_fail">Đăng ký thất bại</string>
    <string name="register_email_exits">Email này đã tồn tại</string>
    <string name="login_fail">Tài khoản hoặc mật khẩu không chính xác</string>
    <string name="Select_language">Chọn ngôn ngữ</string>
    <string name="text_intro1.1">Chào mừng đến với</string>
    <string name="text_intro1.2">Sổ Thu Chi</string>
    <string name="text_intro1.3">Trải nghiệm niềm vui quản lý tài chính
        bằng việc đăng ký trong lần đầu sử dụng </string>
    <string name="text_intro2">Kiểm soát thu chi, nhắm thẳng mục tiêu về tài chính </string>
    <string name="text_intro3">Hưởng thụ cuộc sống thoải mái,
        tự do tài chính với người thân, bạn bè</string>
    <string name="text_forget_password_1">Hãy nhập số điện thoại hoặc email
        mà bạn dùng để đăng ký sử dụng </string>
    <string name="text_forget_password_2">Sổ Thu Chi MISA</string>
    <string name="text_forget_password_3">chúng tôi sẽ gửi thông tiên đặt lại mật khẩu cho bạn </string>
    <string name="first_last_name">Họ và tên đệm</string>
    <string name="name">Tên</string>
    <string name="email">Email</string>
    <string name="phone_number">Số điện thoại</string>
    <string name="from_account">Từ tài khoản</string>
    <string name="to_account">Đến tài khoản</string>
    <string name="text_register_policy_1">Bằng cách bấm vào nút đăng ký, bạn đã đồng ý với </string>
    <string name="text_register_policy_2">Điều khoản dịch vụ </string>
    <string name="text_register_policy_3">và </string>
    <string name="text_register_policy_4">Chính sách bảo mật</string>
    <string name="you_are_account_login_now">Bạn đã có tài khoản? Đăng nhập ngay</string>
    <string name="overview">Tổng quan</string>
    <string name="account">Tài khoản</string>
    <string name="add">Thêm</string>
    <string name="report">Báo cáo</string>
    <string name="other">Khác</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="current_finance">Tài chính hiện tại</string>
    <string name="revenue_and_expenditure_situation">Tình hình thu chi</string>
    <string name="spend_analysis">Phân tích chi tiêu</string>
    <string name="collection_analysis">Phân tích thu</string>
    <string name="follow_loan">Theo dõi vay nợ</string>
    <string name="object_collect_spend">Đối tượng thu/chi</string>
    <string name="journey_event">Chuyến đi/Sự kiện</string>
    <string name="finance_analysis">Phân tích tài chính</string>
    <string name="not_select">(Không chọn)</string>
    <string name="money">Tiền</string>
    <string name="spend_money">Chi tiền</string>
    <string name="collect_money">Thu tiền</string>
    <string name="loan">Cho vay</string>
    <string name="borrow">Đi vay</string>
    <string name="transfer">Chuyển khoản</string>
    <string name="balance_adjustment">Điều chỉnh số dư</string>
    <string name="save">Lưu</string>
    <string name="number_money">Số tiền</string>
    <string name="collection">Thu</string>
    <string name="spending">Chi</string>
    <string name="dong">đ</string>
    <string name="total_money">Tổng tiền: </string>
    <string name="using">Đang sử dụng</string>
    <string name="address">Địa điểm</string>
    <string name="who_with_pay">Chi với ai</string>
    <string name="who_with">Với ai</string>
    <string name="pay_for_someone">Chi cho ai</string>
    <string name="select_item">Chọn hạng mục</string>
    <string name="select_account">Chọn tài khoản</string>
    <string name="explain">Diễn giải</string>
    <string name="add_account">Thêm tài khoản</string>
    <string name="edit_account">Sửa tài khoản</string>
    <string name="initial_balance">Số dư ban đầu</string>
    <string name="total_balance">Tổng số dư</string>
    <string name="total_balance_hidden">***000</string>
    <string name="not_include_report">Không tính vào báo cáo</string>
    <string name="not_include_report_content">Ghi chép trong tài khoản này sẽ không được thống
        kê vào TẤT CẢ các báo cáo (Trừ báo cáo theo dõi vay nợ)</string>
    <string name="account_name">Tên tài khoản</string>
    <string name="account_type">Loại tài khoản</string>
    <string name="VND">VND</string>
    <string name="cash">Tiền mặt</string>
    <string name="account_more">Khác</string>
    <string name="account_bank">Tài khoản ngân hàng</string>
    <string name="credit">Thẻ tín dụng</string>
    <string name="account_invest">Tài khoản đầu tư</string>
    <string name="insert_account_success">Thêm tài khoản thành công</string>
    <string name="insert_account_fail">Thêm tài khoản thất bại</string>
    <string name="update_account_success">Sửa tài khoản thành công</string>
    <string name="update_account_fail">Sửa tài khoản thất bại</string>
    <string name="delete_account_success">Xóa tài khoản thành công</string>
    <string name="delete_account_fail">Xóa tài khoản thất bại</string>
    <string name="insert_pay_success">Thêm chi tiền thành công</string>
    <string name="insert_pay_fail">Thêm chi tiền thất bại</string>
    <string name="update_pay_success">Sửa chi tiền thành công</string>
    <string name="update_pay_fail">Sửa chi tiền thất bại</string>
    <string name="delete_pay_success">Xóa chi tiền thành công</string>
    <string name="delete_pay_fail">Xóa chi tiền thất bại</string>
    <string name="insert_category_success">Thêm hạng mục thành công</string>
    <string name="insert_category_fail">Thêm hạng mục thất bại</string>
    <string name="update_category_success">Sửa hạng mục thành công</string>
    <string name="update_category_fail">Sửa hạng mục thất bại</string>
    <string name="delete_category_success">Xóa hạng mục thành công</string>
    <string name="delete_category_fail">Xóa hạng mục thất bại</string>
    <string name="same_category">Không thể sửa 2 hạng mục cha và con giống nhau</string>
    <string name="insert_sub_category_success">Thêm hạng mục con thành công</string>
    <string name="insert_sub_category_fail">Thêm hạng mục con thất bại</string>
    <string name="update_sub_category_success">Sửa hạng con mục thành công</string>
    <string name="update_sub_category_fail">Sửa hạng mục con thất bại</string>
    <string name="delete_sub_category_success">Xóa hạng mục con thành công</string>
    <string name="delete_sub_category_fail">Xóa hạng mục con thất bại</string>
    <string name="insert_collect_success">Thêm thu tiền thành công</string>
    <string name="insert_collect_fail">Thêm thu tiền thất bại</string>
    <string name="update_collect_success">Sửa thu tiền thành công</string>
    <string name="update_collect_fail">Sửa thu tiền thất bại</string>
    <string name="delete_collect_success">Xóa thu tiền thành công</string>
    <string name="delete_collect_fail">Xóa thu tiền thất bại</string>
    <string name="insert_debt_collect_success">Thêm thu nợ thành công</string>
    <string name="insert_debt_collect_fail">Thêm thu nợ thất bại</string>
    <string name="update_debt_collect_success">Sửa thu nợ thành công</string>
    <string name="update_debt_collect_fail">Sửa thu nợ thất bại</string>
    <string name="delete_debt_collect_success">Xóa thu nợ thành công</string>
    <string name="delete_debt_collect_fail">Xóa thu nợ thất bại</string>
    <string name="insert_debt_pay_success">Thêm trả nợ thành công</string>
    <string name="insert_debt_pay_fail">Thêm trả nợ thất bại</string>
    <string name="update_debt_pay_success">Sửa trả nợ thành công</string>
    <string name="update_debt_pay_fail">Sửa trả nợ thất bại</string>
    <string name="delete_debt_pay_success">Xóa trả nợ thành công</string>
    <string name="delete_debt_pay_fail">Xóa trả nợ thất bại</string>
    <string name="insert_loan_success">Thêm cho vay thành công</string>
    <string name="insert_loan_fail">Thêm cho vay thất bại</string>
    <string name="update_loan_success">Sửa cho vay thành công</string>
    <string name="update_loan_fail">Sửa cho vay thất bại</string>
    <string name="delete_loan_success">Xóa cho vay thành công</string>
    <string name="delete_loan_fail">Xóa cho vay thất bại</string>
    <string name="insert_borrow_success">Thêm cho vay thành công</string>
    <string name="insert_borrow_fail">Thêm cho vay thất bại</string>
    <string name="update_borrow_success">Sửa cho vay thành công</string>
    <string name="update_borrow_fail">Sửa cho vay thất bại</string>
    <string name="delete_borrow_success">Xóa cho vay thành công</string>
    <string name="delete_borrow_fail">Xóa cho vay thất bại</string>
    <string name="insert_transfer_success">Thêm chuyển khoản thành công</string>
    <string name="insert_transfer_fail">Thêm chuyển khoản thất bại</string>
    <string name="update_transfer_success">Sửa chuyển khoản thành công</string>
    <string name="update_transfer_fail">Sửa chuyển khoản thất bại</string>
    <string name="delete_transfer_success">Xóa chuyển khoản thành công</string>
    <string name="delete_transfer_fail">Xóa chuyển khoản thất bại</string>
    <string name="note">Chú ý</string>
    <string name="you_want_delete_account">Bạn có muốn xóa tài khoản này không</string>
    <string name="share_account">Chia sẻ tài khoản</string>
    <string name="edit">Sửa</string>
    <string name="setting">Cài đặt</string>
    <string name="delete">Xóa</string>
    <string name="success">thành công</string>
    <string name="fail">thất bại</string>
    <string name="stop_using">Ngừng sử dụng</string>
    <string name="no">Không</string>
    <string name="yes">Có</string>
    <string name="send_donate">Được cho/tặng</string>
    <string name="saving_interest">Lãi tiết kiệm</string>
    <string name="salary">Lương</string>
    <string name="reward">Thưởng</string>
    <string name="interest">Tiền lãi</string>
    <string name="debt_collection">Thu nợ</string>
    <string name="debt_pay">Trả nợ</string>
    <string name="fee">Phí</string>
    <string name="take_a_loan_to_pay_this_amount">Đi vay để trả khoản này</string>
    <string name="repayment_date">Ngày trả nợ</string>
    <string name="lender">Người cho vay</string>
    <string name="borrower">Người vay</string>
    <string name="current_time">Giờ hiện tại</string>
    <string name="close">Đóng</string>
    <string name="with_whom">Với ai</string>
    <string name="select_or_enter_a_new_object_name">Chọn hoặc nhập mới tên đối tượng</string>
    <string name="attention">Chú ý!</string>
    <string name="attention_delete_account_1">Nếu bạn xóa tài khoản này, </string>
    <string name="attention_delete_account_2">tất cả các ghi chép liên quan cũng sẽ bị xóa. </string>
    <string name="attention_delete_account_3">Dữ liệu bị xóa sẽ không thể khôi phục lại được. </string>
    <string name="attention_delete_account_4">Bạn có thực sự muốn xóa không?</string>
    <string name="general_settings">Cài đặt chung</string>
    <string name="language">Ngôn ngữ</string>
    <string name="date_format">Đạnh dạng thời gian</string>
</resources>