<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        app:showAsAction="always"
        android:icon="@drawable/ic_home"
        android:id="@+id/item_overview"
        android:title="@string/overview" />

    <item
        app:showAsAction="always"
        android:icon="@drawable/ic_wallet"
        android:id="@+id/item_account"
        android:title="@string/account" />

    <item
        app:showAsAction="always"
        android:id="@+id/item_plus"
        android:title="" />

    <item
        app:showAsAction="always"
        android:icon="@drawable/ic_expense_analysic_report"
        android:id="@+id/item_report"
        android:title="@string/report" />

    <item
        app:showAsAction="always"
        android:icon="@drawable/ic_more"
        android:id="@+id/item_more"
        android:title="@string/other" />

</menu>