<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.account.forget.ForgetPasswordActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tbaRegister"
        app:title="@string/forget_password"
        app:titleTextColor="@color/white"
        android:background="@color/blue"
        app:navigationIcon="@drawable/ic_arrow_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_margin="@dimen/margin_large"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/text_forget_password_1"
            android:gravity="center"
            android:layout_margin="@dimen/margin_large"
            style="@style/TextViewNormalBlack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/etPhoneOrEmailRegister"
            style="@style/EditTextNormal"
            android:hint="@string/phone_number_or_email"
            android:layout_margin="@dimen/margin_large"
            android:paddingStart="@dimen/padding_start_edit_text"
            android:background="@drawable/bg_et_login_register"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_edit_text_login_register"/>

        <Button

            android:textColor="@color/white"
            android:text="@string/come_on"
            android:background="@drawable/bg_btn_login_register"
            android:layout_margin="@dimen/margin_large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>
</LinearLayout>