<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="@dimen/margin_large"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.account.register.RegisterActivity">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_marginTop="@dimen/margin_large"
            android:layout_gravity="center"
            android:background="@drawable/android_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_margin="@dimen/margin_large"
            android:textStyle="bold"
            style="@style/TextViewNormalBlack"
            android:layout_gravity="center"
            android:text="@string/receipts_and_payments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:weightSum="2"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etLastNameRegister"
                android:layout_weight="1"
                style="@style/EditTextNormal"
                android:paddingStart="@dimen/padding_start_edit_text"
                android:background="@drawable/bg_et_login_register"
                android:layout_margin="@dimen/margin_large"
                android:hint="@string/first_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/etFirstNameRegister"
                android:layout_weight="1"
                style="@style/EditTextNormal"
                android:paddingStart="@dimen/padding_start_edit_text"
                android:background="@drawable/bg_et_login_register"
                android:layout_margin="@dimen/margin_large"
                android:hint="@string/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <EditText
            android:id="@+id/etEmailRegister"
            style="@style/EditTextNormal"
            android:paddingStart="@dimen/padding_start_edit_text"
            android:background="@drawable/bg_et_login_register"
            android:layout_margin="@dimen/margin_large"
            android:hint="@string/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/etNumberPhoneRegister"
            style="@style/EditTextNormal"
            android:paddingStart="@dimen/padding_start_edit_text"
            android:background="@drawable/bg_et_login_register"
            android:layout_margin="@dimen/margin_large"
            android:hint="@string/phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/etPasswordRegister"
            style="@style/EditTextNormal"
            android:paddingStart="@dimen/padding_start_edit_text"
            android:background="@drawable/bg_et_login_register"
            android:layout_margin="@dimen/margin_large"
            android:hint="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tvPolicyRegister"
            android:layout_margin="@dimen/margin_large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btnRegister"
            android:layout_margin="@dimen/margin_large"
            android:textColor="@color/white"
            android:text="@string/register"
            android:background="@drawable/bg_btn_login_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            style="@style/TextViewNormalBlack"
            android:text="@string/you_are_account_login_now"
            android:layout_gravity="center"
            android:id="@+id/tvLoginNowRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginBottom="@dimen/margin_large"
        android:layout_alignParentBottom="true"
        android:gravity="bottom"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include
                android:layout_toStartOf="@id/tvOrLoginCenter"
                android:layout_height="@dimen/height_view_line"
                android:layout_width="match_parent"
                layout="@layout/view_line"
                android:layout_centerVertical="true"
                />

            <TextView
                android:layout_margin="@dimen/margin_large"
                style="@style/TextViewNormalBlack"
                android:layout_centerHorizontal="true"
                android:id="@+id/tvOrLoginCenter"
                android:text="@string/or_login_with"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <include
                layout="@layout/view_line"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/tvOrLoginCenter"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_view_line"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_marginBottom="@dimen/margin_large"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_margin="@dimen/margin_large"
                android:id="@+id/ivLoginFacebook"
                android:background="@drawable/ic_icon_facebook"
                android:layout_width="@dimen/ic_login_facebook_google"
                android:layout_height="@dimen/ic_login_facebook_google"/>

            <ImageView
                android:layout_margin="@dimen/margin_large"
                android:id="@+id/ivLoginGoogle"
                android:background="@drawable/ic_google_40"
                android:layout_width="@dimen/ic_login_facebook_google"
                android:layout_height="@dimen/ic_login_facebook_google"/>

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>