<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content">

    <TextView
        android:padding="@dimen/padding_medium"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="@dimen/font_size_title"
        android:gravity="center"
        android:text="@string/attention"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ImageView
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_gravity="center"
        android:background="@drawable/v2_ic_logo_dialog"
        android:layout_width="@dimen/width_dialog_attention"
        android:layout_height="@dimen/height_dialog_attention" />

    <TextView
        android:id="@+id/tvContentAttention"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_margin="@dimen/margin_large"
        android:textSize="@dimen/font_medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:padding="@dimen/padding_large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:padding="@dimen/padding_large"
            android:textSize="@dimen/font_large"
            android:layout_marginEnd="@dimen/margin_large"
            android:layout_toStartOf="@id/tvYesAttention"
            android:id="@+id/tvNoAttention"
            android:textColor="@color/red"
            android:background="@drawable/bg_select_ripple_gray"
            android:textAllCaps="true"
            android:text="@string/no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:padding="@dimen/padding_large"
            android:textSize="@dimen/font_large"
            android:layout_marginEnd="@dimen/margin_large"
            android:id="@+id/tvYesAttention"
            android:textColor="@color/blue"
            android:background="@drawable/bg_select_ripple_gray"
            android:text="@string/yes"
            android:textAllCaps="true"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

</LinearLayout>