<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_white"
    tools:context=".ui.main.more.general.GeneralSettingsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tbGeneralSettings"
        app:titleTextColor="@color/white"
        app:title="@string/general_settings"
        app:navigationIcon="@drawable/ic_arrow_back"
        android:background="@color/blue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:background="@drawable/bg_select_ripple_gray"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_item_plus">

        <TextView
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/margin_large_small"
            android:textColor="@color/text_valuable"
            android:textSize="@dimen/font_small"
            android:text="@string/language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:gravity="center"
            android:drawablePadding="@dimen/padding_small"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/margin_large"
            android:drawableTint="@color/text_unvalue"
            android:layout_alignParentEnd="true"
            android:textColor="@color/blue"
            android:textSize="@dimen/font_small"
            android:text="@string/vietnamese"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:drawableEndCompat="@drawable/ic_arrow_right" />

        <include
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_view_line"
            layout="@layout/view_line" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlDateFormat"
        android:background="@drawable/bg_select_ripple_gray"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_item_plus">

        <TextView
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/margin_large_small"
            android:textColor="@color/text_valuable"
            android:textSize="@dimen/font_small"
            android:text="@string/date_format"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvDateFormat"
            android:gravity="center"
            android:drawablePadding="@dimen/padding_small"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/margin_large"
            android:drawableTint="@color/text_unvalue"
            android:layout_alignParentEnd="true"
            android:textColor="@color/blue"
            android:textSize="@dimen/font_small"
            android:text="@string/vietnamese"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:drawableEndCompat="@drawable/ic_arrow_right" />

        <include
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_view_line"
            layout="@layout/view_line" />
    </RelativeLayout>


</LinearLayout>